updated meta content for open graph tags

--- a/appdev.html
+++ b/appdev.html
@@ -13,8 +13,10 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="App Development Services - DesignCraft">
   <meta property="og:description" content="Get custom mobile app development services for iOS and Android. DesignCraft builds high-quality, responsive apps that deliver exceptional user experiences.">
-  <meta property="og:image" content="link-to-image.jpg">
-  <meta property="og:url" content="https://designcrafts.netlify.app/app-development">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
@@ -30,7 +32,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
-  <link rel="canonical" href="https://designcrafts.netlify.app/app-development">
+  <link rel="canonical" href="https://designcrafts.netlify.app/appdev">
 
 </head>
 <body>
