--- a/blog1.html
+++ b/blog1.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blogs</title>
-  <link rel="stylesheet" href="blog.css">
+  
+  <!-- Title Tag -->
+  <title>DesignCraft Blogs | Insights on Web Development, App Development & Digital Marketing</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Stay ahead with DesignCraft's expert blogs. Get the latest trends, insights, and strategies in web development, app development, and digital marketing.">
+
+  <meta property="og:title" content="Top Web Development Trends for 2024 | DesignCraft Insights">
+  <meta property="og:description" content="Stay ahead in the digital world with the latest web development trends. Explore insights on cutting-edge technologies and strategies shaping the web in 2024.">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/blog">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="DesignCraft Blogs - Trends & Insights">
+  <meta name="twitter:description" content="Stay updated with DesignCraft's expert blogs. Discover trends and insights in web development, app development, and digital marketing.">
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/blog1.png">
+
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="blog.css"> <!-- Replace with actual CSS path -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/blog1">
 </head>
 <body>
   <!-- Navbar -->
