--- a/careers.html
+++ b/careers.html
@@ -11,8 +11,8 @@
   <meta name="description" content="Discover exciting career opportunities at DesignCraft. Join our team of experts in web development, app development, and digital marketing. Be part of the innovation!">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="DesignCraft - IT Solutions">
-    <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
+    <meta property="og:title" content="Join DesignCraft - Careers">
+    <meta property="og:description" content="Explore exciting career opportunities at DesignCraft. Join our team and be a part of innovative web development, app development, and digital marketing projects.">    
     <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1000">
