--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,8 @@
   <!-- Meta Description -->
   <meta name="description" content="Get in touch with DesignCraft for IT solutions including web development, app development, and digital marketing. Our team is ready to help your business grow. Contact us today!">
 
-  <!-- Open Graph Tags -->
-  <meta property="og:title" content="DesignCraft - IT Solutions- Web Development, App Development & Digital Marketing Services">
-  <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
+  <meta property="og:title" content="Contact Us - DesignCraft - IT Solutions">
+  <meta property="og:description" content="Contact DesignCraft for all your IT solutions needs. Whether you need web development, app development, or digital marketing, our team is ready to assist you.">
   <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1000">
