--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="DesignCraft offers top-notch IT solutions including web development, app development, and digital marketing services. Tailored solutions to help your business grow online.">
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="DesignCraft - IT Solutions- Web Development, App Development & Digital Marketing Services">
+  <meta property="og:title" content="DesignCraft - Web Development, App Development & Digital Marketing Services">
   <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
   <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
   <meta property="og:image:width" content="1200">
