--- a/marketing.html
+++ b/marketing.html
@@ -13,8 +13,10 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Digital Marketing Services - DesignCraft">
   <meta property="og:description" content="Elevate your online presence with DesignCraft's digital marketing services, including SEO, PPC, social media marketing, and custom strategies to drive traffic and conversions.">
-  <meta property="og:image" content="link-to-image.jpg">
-  <meta property="og:url" content="https://designcrafts.netlify.app/digital-marketing">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
@@ -30,7 +32,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
-  <link rel="canonical" href="https://designcrafts.netlify.app/digital-marketing">
+  <link rel="canonical" href="https://designcrafts.netlify.app/marketing">
 
 </head>
   <!-- Navbar -->
