--- a/webdev.html
+++ b/webdev.html
@@ -13,8 +13,10 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Web Development Services - DesignCraft">
   <meta property="og:description" content="Build your online presence with DesignCraft's custom web development services. We specialize in responsive websites, web applications, and e-commerce platforms.">
-  <meta property="og:image" content="link-to-image.jpg">
-  <meta property="og:url" content="https://designcrafts.netlify.app/web-development">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
@@ -30,7 +32,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
-  <link rel="canonical" href="https://designcrafts.netlify.app/web-development">
+  <link rel="canonical" href="https://designcrafts.netlify.app/webdev">
 
 </head>
 <body>
