updated meta description and created sitemap.xml

--- a/Testimonials.html
+++ b/Testimonials.html
@@ -3,9 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testimonials about DesignCraft</title>
-  <link rel="stylesheet" href="testi.css">
+  
+  <!-- Title Tag -->
+  <title>Customer Testimonials | DesignCraft - Web, App Development & Digital Marketing</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Read real customer testimonials to see how DesignCraft's web development, app development, and digital marketing services have helped businesses succeed.">
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Customer Testimonials | DesignCraft">
+  <meta property="og:description" content="Discover how DesignCraft's services in web development, app development, and digital marketing have helped businesses thrive. Hear from our satisfied clients.">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/Testimonials/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Customer Testimonials | DesignCraft">
+  <meta name="twitter:description" content="Read client testimonials on how DesignCraft’s services in web development, app development, and digital marketing helped them achieve success.">
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/share-image.png">
+
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="testi.css"> <!-- Replace with actual CSS path -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/Testimonials">
 </head>
+
 <body>
   <!-- Navbar -->
   <header>
