--- a/casestudies.html
+++ b/casestudies.html
@@ -3,9 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DesignCraft Case-Studies</title>
-  <link rel="stylesheet" href="testi.css">
+  
+  <!-- Title Tag -->
+  <title>Case Studies | DesignCraft - Web, App Development & Digital Marketing</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Explore DesignCraft's case studies to see how we’ve helped businesses achieve their goals with expert web development, app development, and digital marketing solutions.">
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Case Studies | DesignCraft">
+  <meta property="og:description" content="Discover how DesignCraft’s web development, app development, and digital marketing services have transformed businesses. Read our successful case studies here.">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1000">
+  <meta property="og:url" content="https://designcrafts.netlify.app/casestudies/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Case Studies | DesignCraft">
+  <meta name="twitter:description" content="Explore DesignCraft's successful case studies. See how our web development, app development, and digital marketing services helped businesses grow.">
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/share-image.png">
+
+
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="testi.css"> <!-- Replace with actual CSS path -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/casestudies/">
 </head>
+
 <body>
   <!-- Navbar -->
   <header>
