--- a/index.html
+++ b/index.html
@@ -155,12 +155,11 @@
   <section id="clients" class="section">
     <h2>Clients</h2>
     <div class="clients-grid">
-      <img src="path-to-logo1.jpg" alt="Client 1">
-      <img src="path-to-logo2.jpg" alt="Client 2">
-      <img src="path-to-logo3.jpg" alt="Client 3">
-      <img src="path-to-logo4.jpg" alt="Client 4">
-      <img src="path-to-logo5.jpg" alt="Client 5">
-      <img src="path-to-logo6.jpg" alt="Client 6">
+      <img src="images/client5 (1).png" alt="Client 1">
+      <img src="images/client5 (2).png" alt="Client 2">
+      <img src="images/client5 (3).png" alt="Client 3">
+      <img src="images/client5 (4).png" alt="Client 4">
+      <img src="images/client5 (5).png" alt="Client 5">
     </div>
   </section>
   
