--- a/about.html
+++ b/about.html
@@ -97,12 +97,12 @@
         Our team of developers, designers, and strategists bring years of experience to every project, united by a shared passion for innovation.
       </p>
       <div class="team-grid">
-        <img src="team1.jpg" alt="Team member 1">
-        <img src="team2.jpg" alt="Team member 2">
-        <img src="team3.jpg" alt="Team member 3">
-        <img src="team4.jpg" alt="Team member 4">
-        <img src="team5.jpg" alt="Team member 5">
-        <img src="team6.jpg" alt="Team member 6">
+        <img src="images/Team1.png" alt="Team member 1">
+        <img src="images/Team2.png" alt="Team member 2">
+        <img src="images/Team3.png" alt="Team member 3">
+        <img src="images/Team4.png" alt="Team member 4">
+        <img src="images/Team5.png" alt="Team member 5">
+        <img src="images/Team6.png" alt="Team member 6">
       </div>
     </div>
   
