--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <h2>Recent Projects</h2>
     <div class="projects-gallery">
       <img src="images/blog3.png" alt="Finora Project">
-      <img src="path-to-craft-hugo-image.jpg" alt="Craft Hugo Project">
+      <img src="images/Project.png" alt="Gymamme">
     </div>
   </section>
   
