--- a/index.html
+++ b/index.html
@@ -147,14 +147,15 @@
   <section id="recent-projects" class="section">
     <h2>Recent Projects</h2>
     <div class="projects-gallery">
-      <img src="images/blog3.png" alt="Finora Project">
       <img src="images/Project.png" alt="Gymamme">
+      <img src="images/TerserkProject.png" alt="Finora Project">
     </div>
   </section>
   
   <section id="clients" class="section">
     <h2>Clients</h2>
     <div class="clients-grid">
+      <img src="images/Client7.png" alt="Client 0">
       <img src="images/client5 (1).png" alt="Client 1">
       <img src="images/client5 (2).png" alt="Client 2">
       <img src="images/client5 (3).png" alt="Client 3">
