final commit before launch

--- a/casestudies.html
+++ b/casestudies.html
@@ -72,7 +72,7 @@
         <div class="case-study-content">
           <h3>Project: Finora</h3>
           <p>Designed a seamless digital banking platform, focusing on user-friendly navigation and responsive web design.</p>
-          <a href="#">Read More</a>
+          <a href="case1.html">Read More</a>
         </div>
       </div>
       <div class="case-study-card">
@@ -80,6 +80,70 @@
         <div class="case-study-content">
           <h3>Project: Roomify</h3>
           <p>Developed a housing marketplace with intuitive filters and dynamic visual elements.</p>
+          <a href="Roomify.html">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="roomify.html">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="case-study-card">
+        <img src="smart-health-project.jpg" alt="Smart Health Project" class="case-study-image">
+        <div class="case-study-content">
+          <h3>Project: Smart Health</h3>
+          <p>Created an EHR system with SaaS integration, improving scalability and usability for healthcare providers.</p>
           <a href="#">Read More</a>
         </div>
       </div>
