--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,8 @@
   
     <div class="get-in-touch">
       <h3>Get in touch with us</h3>
-      <button class="email-btn">Send Email</button>
+      <a href="mailto:mail@designcraft.com"><button class="email-btn">Send Email</button></a>
       <p><a href="mailto:mail@designcraft.com">mail@designcraft.com</a></p>
-      <p>+27 74 755 3247</p>
     </div>
   </section>
   
