--- a/index.html
+++ b/index.html
@@ -96,21 +96,17 @@
         <span>85%</span>
         <p>ROI</p>
       </div>
-      <div class="stat-item">
-        <span>5+</span>
-        <p>Countries</p>
-      </div>
     </div>
     <div class="stats-button">
       <button class="btn-secondary">Find Out Why Us</button>
       <div class="popup-menu">
         <div class="menu-item">
-          <a href="Testimonials.html">Testimonials</a>
+          <a href="Testimonialss.html">Testimonials</a>
           <p>Check out what people say about us</p>
         </div>
         <hr class="divider" />
         <div class="menu-item">
-          <a href="casestudies.html">Case Studies</a>
+          <a href="casestudiess.html">Case Studies</a>
           <p>Check our impact for our clients</p>
         </div>
       </div>
