updated contact details

--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
   
     <div class="get-in-touch">
       <h3>Get in touch with us</h3>
-      <a href="mailto:mail@designcraft.com"><button class="email-btn">Send Email</button></a>
-      <p><a href="mailto:mail@designcraft.com">mail@designcraft.com</a></p>
+      <a href="mailto:designcraft033@gmail.com"><button class="email-btn">Send Email</button></a>
+      <p><a href="mailto:designcraft033@gmail.com">mail@designcraft.com</a></p>
     </div>
   </section>
   
